--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>NEXUS - Smart Dashboard</title>
     <meta name="description" content="Smart and Interactive Dashboard for Healthcare Professionals" />
 
-    <link rel="icon" type="image/png" href="/nexus.png" />
+    <link rel="icon" type="image/png" href="/apple-touch-icon.png" />
     
-    <link rel="apple-touch-icon" href="/nexus.png" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-title" content="NEXUS" />
