--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     
-    <title>NEXUS - Smart Dashboard</title>
+    <title>NEXUS Smart Dashboard</title>
     <meta name="description" content="Smart and Interactive Dashboard for Healthcare Professionals" />
 
     <link rel="icon" type="image/png" href="/apple-touch-icon.png" />
